syntax="proto3";

package proto;

option go_package="github.com/cod3rboy/demo-grpc/proto";

service InvoicerService {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc Get(InvoiceRequest) returns (InvoiceResponse);
}

message Amount {
    string currency = 1;
    int64 value = 2;
}

message CreateRequest {
    Amount amount = 1; // Amount paid
    string fromName = 2; // Who paid the amount?
    string serviceAvailed = 3; // Which service was availed?
}

message CreateResponse {
    string id = 1; // ID of the generated invoice
}

enum InvoiceStatusEnum { // Enum representing various statuses for an invoice
    Pending = 0;
    Success = 1;
    Failed = 2;
}

message InvoiceRequest {
    string invoiceId = 1; // ID of the invoice
}

message InvoiceResponse {
    string id = 1; // ID of the invoice
    InvoiceStatusEnum status = 2; // Status of invoice generation
    bytes invoice = 3; // binary data for generated invoice text file
}